--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="items"></div>
     <button id="addItem">➕ Add Item</button>
 
-   
+<button id="printBtn" class="btn-print" onclick="directPrint()">Direct Print</button>   
 <button id="downloadBtn" style="padding: 10px 20px; background: #28a745; color: white; border: none; cursor: pointer;">
     Download PDF
 </button>
